# prompt_basic_20250618

./: .gitignore  .langchain_cache.db  1.환경설정.ipynb  2.모델성능테스트.ipynb  3.lagnchain_basic.ipynb  3.langchain_basic.ipynb  4.langchain_template.ipynb  5.langchain_parser.ipynb  langchain_parser.ipynb  main.py  novel_prompt.txt  p.py  pyproject.toml
__MACOSX/: ._novel_prompt.txt
